--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
     font-family: 'Open Sans'
 }
 
+
 .newsletter{
     color: grey;
     border: solid thin #cfcfcf;
@@ -53,6 +54,7 @@ h3{
     position: absolute;
     top: 0;
     right: 4px;
+    box-shadow: 0 0 4px 4px gray;
 }
 
 #questionmark{
@@ -68,4 +70,21 @@ h3{
     position: fixed;
     bottom: 10px;
     right: 10px;
+}
+
+.card {
+background-color: #3cb878;
+width: 180px;
+color: white;
+text-align: center;
+padding: 20px 0;
+box-shadow: 0 0 7px 2px gray;
+margin-bottom: 40px;
+
+
+}
+
+.card h3 {
+margin-bottom: 0;
+margin-top: 10px;
 }
