--- a/style.css
+++ b/style.css
@@ -54,7 +54,6 @@ h3{
     position: absolute;
     top: 0;
     right: 4px;
-    box-shadow: 0 0 4px 4px gray;
 }
 
 #questionmark{
@@ -87,4 +86,13 @@ margin-bottom: 40px;
 .card h3 {
 margin-bottom: 0;
 margin-top: 10px;
+}
+
+#card-holder {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    align-content: space-around;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
